--- a/assets/components/00-tokens/_2-fonts.scss
+++ b/assets/components/00-tokens/_2-fonts.scss
@@ -1,8 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@500&display=swap');
 
 :root {
   --font-sans-serif: 'HelveticaNeue', 'Helvetica', 'Arial', sans-serif;
   --font-inter: 'Inter', var(--font-sans-serif);
+  --font-sketch: 'Playpen Sans', var(--font-sans-serif);
   --font-base: var(--font-inter);
 }
 
