--- a/assets/components/00-tokens/_3-type.scss
+++ b/assets/components/00-tokens/_3-type.scss
@@ -86,14 +86,14 @@ blockquote {
 
   background: var(--color-gray-medium);
   border-radius: var(--border-radius);
-  font-family: sketchnote-text, sans-serif;
+  font-family: var(--font-sketch);
   font-weight: 400;
   line-height: 1.8;
   font-size: --font-size;
   color: #606060;
   letter-spacing: 0.5px;
 
-  > *:last-child {
+  >*:last-child {
     margin-bottom: 0;
   }
 }
