--- a/assets/components/00-tokens/_8-aspects.scss
+++ b/assets/components/00-tokens/_8-aspects.scss
@@ -1,13 +1,11 @@
 .aspect {
   background: #fff8b9;
-  background-image: linear-gradient(
-    to right,
-    #fff386 0%,
-    #fff8b9 60%,
-    #fff386 100%
-  );
+  background-image: linear-gradient(to right,
+      #fff386 0%,
+      #fff8b9 60%,
+      #fff386 100%);
   border-radius: 2px;
-  font-style: italic;
+  // font-style: italic;
   font-size: 1.0625rem;
-  font-family: sketchnote-text, sans-serif;
+  font-family: var(--font-sketch);
 }
