--- a/assets/components/01-components/header/_header.scss
+++ b/assets/components/01-components/header/_header.scss
@@ -304,7 +304,7 @@
     position: absolute;
     top: 75px;
     left: var(--s05);
-    width: 636px;
+    width: 700px;
     background: var(--color-white);
     border-radius: var(--border-radius);
     box-shadow: 0 100px 80px rgba(0, 0, 0, 0.37),
@@ -350,6 +350,7 @@
       margin: 0 0 calc(var(--s) * 1.5);
       padding-bottom: var(--s);
       border-bottom: 1px solid var(--color-gray-medium);
+      display: inline-block;
 
       &:nth-child(3n) {
         margin-bottom: 0;
