--- a/assets/components/00-tokens/_1-colors.scss
+++ b/assets/components/00-tokens/_1-colors.scss
@@ -14,4 +14,5 @@
   --color-yellow-dark: #95813A;
   --color-dark: var(--color-gray-dark);
   --color-patreon-orange: #E85B46;
+  --color-new: #FF2828;
 }
