--- a/assets/components/01-components/nav-in-page/_nav-in-page.scss
+++ b/assets/components/01-components/nav-in-page/_nav-in-page.scss
@@ -72,6 +72,15 @@
     font-size: 1.111111111rem;
     font-weight: 700;
     text-transform: uppercase;
+
+    button {
+      background: transparent;
+      border: none;
+      font-weight: bold;
+      text-transform: uppercase;
+      padding: 0;
+      margin: 0;
+    }
   }
 
   &__ul {
