--- a/assets/components/02-pages/_home.scss
+++ b/assets/components/02-pages/_home.scss
@@ -153,7 +153,11 @@
   }
 
   &__item-content-wrapper {
-    padding: var(--s2) var(--s2) var(--s2);
+    padding: 0 var(--s2) var(--s2);
+
+    @include medium {
+      padding-top: var(--s2);
+    }
   }
 
   &__button {
@@ -178,6 +182,7 @@
       font-weight: 700;
       opacity: 0.7;
       margin-bottom: var(--s025);
+      padding: var(--s2) var(--s2) 0;
     }
 
     @include large {
