--- a/assets/components/style.scss
+++ b/assets/components/style.scss
@@ -28,6 +28,7 @@
 @import '01-components/announcement/announcement';
 @import '01-components/sharing/sharing';
 @import '01-components/firesale/firesale';
+@import '01-components/licensing-nav/licensing-nav';
 @import '02-pages/main-layout';
 @import '02-pages/page-wrapper';
 @import '02-pages/basic/basic-bkg';
