--- a/assets/components/01-components/header/_header.scss
+++ b/assets/components/01-components/header/_header.scss
@@ -275,11 +275,6 @@
       border-bottom: 1px solid var(--color-gray-medium);
       width: 100%;
 
-      &:nth-child(3n) {
-        margin-bottom: 0;
-        border-bottom: none;
-      }
-
       &--simple {
         border-bottom: none;
         margin-bottom: 0;
@@ -386,11 +381,7 @@
       padding-bottom: var(--s);
       border-bottom: 1px solid var(--color-gray-medium);
       display: inline-block;
-
-      &:nth-child(3n) {
-        margin-bottom: 0;
-        border-bottom: none;
-      }
+      width: 100%;
 
       &--simple {
         border-bottom: none;
