--- a/assets/components/01-components/footer/_footer.scss
+++ b/assets/components/01-components/footer/_footer.scss
@@ -39,6 +39,12 @@
         'nav nav email email'
         'legal legal legal legal';
     }
+
+    .big {
+      font-size: 1rem;
+      margin-bottom: 1rem;
+      font-weight: bold;
+    }
   }
 
   &__patreon {
