--- a/assets/components/01-components/header/_header.scss
+++ b/assets/components/01-components/header/_header.scss
@@ -64,15 +64,22 @@
 
   &__logo {
     display: block;
-    width: 50vw;
+    width: 180px;
+    height: auto;
 
     @include medium {
-      width: 25vw;
+      width: 250px;
     }
 
     @include large {
-      width: 18vw;
+      width: 250px;
     }
+  }
+
+  &__official {
+    color: var(--color-white);
+    text-transform: uppercase;
+    font-weight: bold;
   }
 
   &__nav {
