--- a/assets/components/style.scss
+++ b/assets/components/style.scss
@@ -29,6 +29,7 @@
 @import '01-components/sharing/sharing';
 @import '01-components/firesale/firesale';
 @import '01-components/licensing-nav/licensing-nav';
+@import '01-components/button/button';
 @import '02-pages/main-layout';
 @import '02-pages/page-wrapper';
 @import '02-pages/basic/basic-bkg';
