--- a/assets/components/01-components/nav-in-page/_nav-in-page.scss
+++ b/assets/components/01-components/nav-in-page/_nav-in-page.scss
@@ -132,9 +132,12 @@
       text-decoration: none;
       padding: var(--s05) 0;
       width: calc(100% - 30px);
+      text-decoration: underline;
+      text-decoration-color: transparent;
+      transition: 0.15s;
 
       &:hover {
-        text-decoration: underline;
+        text-decoration-color: var(--color-blue-dark);
       }
 
       &.active {
