--- a/assets/components/01-components/footer/_footer.scss
+++ b/assets/components/01-components/footer/_footer.scss
@@ -93,6 +93,8 @@
     text-decoration: none;
     padding: var(--s05) var(--s05) var(--s05) 0;
     transition: all 0.15s;
+    text-decoration: underline;
+    text-decoration-color: transparent;
 
     @media (prefers-reduced-motion) {
       transition: none;
@@ -100,7 +102,7 @@
 
     &:hover {
       color: var(--color-yellow-light);
-      text-decoration: underline;
+      text-decoration-color: var(--color-yellow-light);
     }
   }
 
@@ -112,13 +114,15 @@
       color: var(--color-yellow-light);
       text-decoration: none;
       transition: all 0.15s;
+      text-decoration: underline;
+      text-decoration-color: transparent;
 
       @media (prefers-reduced-motion) {
         transition: none;
       }
 
       &:hover {
-        text-decoration: underline;
+        text-decoration-color: var(--color-yellow-light);
       }
     }
 
