--- a/src/pages/globals.css
+++ b/src/pages/globals.css
@@ -25,3 +25,10 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+@font-face {
+  font-family: 'Mona Sans';
+  src: url('/fonts/Mona-Sans.woff2') format('woff2 supports variations'), url('/fonts/Mona-Sans.woff2') format('woff2-variations');
+  font-weight: 200 400 500 600 700 800 900;
+  font-stretch: 75% 125%;
+}
