--- a/assets/components/style.scss
+++ b/assets/components/style.scss
@@ -1,5 +1,9 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 // Libraries
-@import '~normalize.css/normalize';
+// @import '~normalize.css/normalize';
 @import '~breakpoint-sass/stylesheets/breakpoint';
 
 // Components
@@ -30,6 +34,7 @@
 @import '01-components/firesale/firesale';
 @import '01-components/licensing-nav/licensing-nav';
 @import '01-components/button/button';
+@import '01-components/date';
 @import '02-pages/main-layout';
 @import '02-pages/page-wrapper';
 @import '02-pages/basic/basic-bkg';
