--- a/assets/components/00-tokens/_9-tables.scss
+++ b/assets/components/00-tokens/_9-tables.scss
@@ -4,10 +4,18 @@ table {
   border-spacing:0;
 }
 
-table tbody tr td,
-table thead tr th {
+table tr td,
+table tr th {
   padding: var(--s025) var(--s);
   border-bottom: 2px solid var(--color-gray-medium);
+}
+
+table tr td {
+  border-left: 2px solid var(--color-gray-medium);
+}
+
+table tr td:last-child {
+  border-right: 2px solid var(--color-gray-medium);
 }
 
 table.skill-list {
@@ -16,4 +24,9 @@ table.skill-list {
 
 table.skill-list tr td:not(:first-child) {
   text-align: center;
+}
+
+table td p,
+table th p {
+  margin: 0;
 }
